# openExchange

OpenExchangeFull/: .gitignore  Cargo.toml  README.md
OpenExchangeFull/bins/openx/: Cargo.toml
OpenExchangeFull/bins/openx/src/: main.rs
OpenExchangeFull/cli/: Cargo.toml
OpenExchangeFull/cli/src/: lib.rs
OpenExchangeFull/config/: Cargo.toml
OpenExchangeFull/config/src/: defaults.rs  lib.rs  parser.rs  substitution.rs  validator.rs
OpenExchangeFull/crates/cli/: Cargo.toml
OpenExchangeFull/crates/cli/src/: lib.rs
OpenExchangeFull/crates/common/: Cargo.toml
OpenExchangeFull/crates/common/src/: error.rs  lib.rs  types.rs
OpenExchangeFull/crates/common/src/addressbook/: health.rs  mod.rs  registry.rs  resolver.rs
OpenExchangeFull/crates/config/: Cargo.toml
OpenExchangeFull/crates/config/src/: defaults.rs  lib.rs  parser.rs  substitution.rs  validator.rs
OpenExchangeFull/crates/instrument/: Cargo.toml
OpenExchangeFull/crates/instrument/src/: error.rs  lib.rs  service.rs  store.rs  types.rs
OpenExchangeFull/crates/instrument/src/api/: forwarding.rs  forwarding_routes.rs  handlers.rs  mod.rs  models.rs  routes.rs
OpenExchangeFull/crates/instrument/src/db/: mod.rs  models.rs  postgres.rs
OpenExchangeFull/crates/instrument/src/generator/: grid.rs  mod.rs  state.rs
OpenExchangeFull/crates/instrument/src/grpc/: client.rs  mod.rs  server.rs
OpenExchangeFull/crates/instrument/src/worker/: mod.rs  service.rs
OpenExchangeFull/crates/market-data/: Cargo.toml
OpenExchangeFull/crates/market-data/src/: black_scholes.rs  candles.rs  coordinator.rs  error.rs  index_price.rs  lib.rs  mark_price.rs  order_book.rs  types.rs  vol_surface.rs
OpenExchangeFull/crates/matching-engine/: Cargo.toml
OpenExchangeFull/crates/matching-engine/src/: circuit_breaker.rs  domain.rs  engine.rs  error.rs  event.rs  lib.rs  log.rs  metrics.rs  result.rs
OpenExchangeFull/crates/matching-engine/src/api/: handlers.rs  mod.rs  routes.rs
OpenExchangeFull/crates/matching-engine/src/store/: memory.rs  mod.rs  redis.rs  traits.rs
OpenExchangeFull/crates/observability/: Cargo.toml
OpenExchangeFull/crates/observability/src/: lib.rs  logging.rs  metrics.rs
OpenExchangeFull/crates/oms/: Cargo.toml
OpenExchangeFull/crates/oms/src/: error.rs  lib.rs  manager.rs  types.rs
OpenExchangeFull/crates/oms/src/api/: forwarding.rs  forwarding_routes.rs  handlers.rs  mod.rs  models.rs  routes.rs
OpenExchangeFull/crates/oms/src/clients/: matching.rs  mod.rs  risk.rs
OpenExchangeFull/crates/oms/src/store/: memory.rs  mod.rs  postgres.rs  traits.rs
OpenExchangeFull/crates/risk-engine/: Cargo.toml
OpenExchangeFull/crates/risk-engine/src/: calculator.rs  client.rs  engine.rs  error.rs  lib.rs  types.rs
OpenExchangeFull/crates/risk-engine/src/api/: handlers.rs  mod.rs  routes.rs
OpenExchangeFull/crates/risk-engine/src/store/: memory.rs  mod.rs  traits.rs
OpenExchangeFull/crates/server/: Cargo.toml
OpenExchangeFull/crates/server/src/: config.rs  error.rs  grpc.rs  health.rs  http.rs  lib.rs  port_validator.rs  shutdown.rs  traits.rs  websocket.rs
OpenExchangeFull/crates/settlement/: Cargo.toml
OpenExchangeFull/crates/settlement/src/: error.rs  lib.rs
OpenExchangeFull/crates/storage/: Cargo.toml
OpenExchangeFull/crates/storage/src/: error.rs  lib.rs
OpenExchangeFull/master_config/: master_config.yaml
OpenExchangeFull/migrations/: 001_create_instruments.sql  002_create_orders.sql
OpenExchangeFull/proto/: instrument.proto
OpenExchangeFull/src/: Cargo.toml  main.rs
