[workspace]
members = ["cli", "config", "src"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenExchange Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/openexchange/open_exchange"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = { version = "2.5", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1