[workspace]
resolver = "2"
members = [
    # Binary
    "bins/openx",
    
    # Core crates
    "crates/cli",
    "crates/config",
    "crates/server",
    "crates/common",
    "crates/observability",
    "crates/instrument",
    
    # Service crates (placeholders for future implementation)
    "crates/storage",
    "crates/matching-engine",
    "crates/risk-engine",
    "crates/oms",
    "crates/market-data",
    "crates/settlement",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenExchange Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/openexchange/open_exchange"
rust-version = "1.75"

[workspace.dependencies]
# === Internal crates ===
cli = { path = "crates/cli" }
config = { path = "crates/config" }
server = { path = "crates/server" }
common = { path = "crates/common" }
observability = { path = "crates/observability" }
instrument = { path = "crates/instrument" }
storage = { path = "crates/storage" }
matching-engine = { path = "crates/matching-engine" }
risk-engine = { path = "crates/risk-engine" }
oms = { path = "crates/oms" }
market-data = { path = "crates/market-data" }
settlement = { path = "crates/settlement" }

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# === CLI ===
clap = { version = "4.4", features = ["derive", "env"] }

# === Async Runtime ===
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-util = { version = "0.7", features = ["time"] }

# === Error Handling ===
anyhow = "1.0"
thiserror = "1.0"

# === Logging & Tracing ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# === Metrics ===
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# === Time ===
chrono = { version = "0.4", features = ["serde"] }

# === Utilities ===
regex = "1.10"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"

# === HTTP Server (Axum) ===
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "request-id"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# === gRPC (Tonic) ===
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"

# === WebSocket ===
tokio-tungstenite = "0.24"
tungstenite = "0.24"

# === Async Utilities ===
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# === HTTP Client ===
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# === Database ===
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal"] }
bigdecimal = "0.4"

# === Testing ===
tokio-test = "0.4"
assert_matches = "1.5"
mockall = "0.12"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
