[[bin]]
name = "openx"
path = "main.rs"

[package]
name = "open_exchange"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cli = { path = "../cli" }
config = { path = "../config" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }