[package]
name = "openx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OpenExchange CLI and server binary"

[[bin]]
name = "openx"
path = "src/main.rs"

[dependencies]
# Internal crates
cli = { workspace = true }
config = { workspace = true }
server = { workspace = true }
observability = { workspace = true }
instrument = { workspace = true }
oms = { workspace = true, features = ["postgres", "api", "client"] }
risk-engine = { workspace = true, features = ["api"] }
common = { workspace = true }

# Web framework
axum = { workspace = true }

# Database
sqlx = { workspace = true }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[lints]
workspace = true
