[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI argument parsing for OpenExchange"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true

[lib]
name = "cli"
path = "src/lib.rs"
