[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Order matching engine for OpenExchange"

[dependencies]
common = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[lib]
name = "matching_engine"
path = "src/lib.rs"
