[package]
name = "observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Observability infrastructure for OpenExchange (metrics, tracing, logging)"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
