[package]
name = "oms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Order Management System for OpenExchange"

[dependencies]
common = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[lib]
name = "oms"
path = "src/lib.rs"
