[package]
name = "risk-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Risk management engine for OpenExchange"

[dependencies]
common = { workspace = true }
config = { workspace = true }
instrument = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
sqlx = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = []
postgres = ["dep:sqlx"]
api = ["dep:axum", "dep:tower", "dep:tower-http"]
client = ["dep:reqwest"]

[lints]
workspace = true

[lib]
name = "risk_engine"
path = "src/lib.rs"
